# Sort_Visualizer

./: .gitignore  README.md
builder/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
include/: list.hpp  main.hpp  tri.hpp  utils.hpp
source/: list.cpp  main.cpp  tri.cpp  utils.cpp
